[package]
name = "sw-composite"
version = "0.7.16"
authors = ["Jeff Muizelaar <jrmuizel@gmail.com>"]
license = "BSD-3-Clause"
description = "a collection of software compositing routines"
documentation = "https://docs.rs/sw-composite"
repository = "https://github.com/jrmuizel/sw-composite/"

[dependencies]
num-traits = { version = "0.2.17", default-features = false, features = ["libm"] }

[features]
default = ["std"]
std = []
